# miniexiv

./: .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE  README.md  portfile.cmake  vcpkg.json
.github/workflows/: docs.yml  release.yml
cmake/: miniexiv.pc.in  miniexivConfig.cmake.in
docker/: Dockerfile.alpine  Dockerfile.arch  Dockerfile.debian  Dockerfile.fedora  Dockerfile.ubuntu  test-build.sh
docs/: Doxyfile.in  faq.dox  getting_started.dox  iterators.dox  mainpage.dox  memory.dox  metadata.dox  threading.dox
include/miniexiv/: miniexiv.h  miniexiv_errors.h
src/: miniexiv.cpp  miniexiv_errors.cpp  version.cpp.in
tests/: CMakeLists.txt  test_all.cpp  test_miniexiv.cpp
